--- a/app/views/code_libraries/index.html.erb
+++ b/app/views/code_libraries/index.html.erb
@@ -20,7 +20,7 @@
     data-reveal-close-label-value="🔰 説明を閉じる">
     <div class="flex justify-end">
       <button type="button"
-              class="px-3 py-1 rounded ring-1 ring-slate-300 text-sm"
+              class="btn-toggle"
               data-reveal-target="button"
               data-action="reveal#toggle">🔰 初めての方へ</button>
     </div>
@@ -137,7 +137,7 @@ Rubyの標準メソッドを効率的に学習しましょう！
               class: "px-3 py-2 rounded ring-1 ring-slate-300" %>
 
         <%= f.submit "検索",
-              class: "px-3 py-2 rounded bg-[#CC0000] text-white hover:bg-[#BB0000] active:bg-[#AA0000]" %>
+              class: "btn-solid-red" %>
       <% end %>
     </div>
 
@@ -156,7 +156,7 @@ Rubyの標準メソッドを効率的に学習しましょう！
             class: "px-3 py-2 rounded #{on ? 'bg-blue-600 text-white' : 'ring-1 ring-slate-300'}" %>
 
       <%= link_to "使い方", help_path,
-            class: "px-3 py-2 rounded bg-[#CC0000] text-white hover:bg-[#BB0000] active:bg-[#AA0000]" %>
+            class: "btn-solid-red" %>
     </div>
   </div>
 </div>
