--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -67,7 +67,7 @@
       <% unless logged_in? %>
         <div class="pb-5 mt-3 flex justify-center">
           <%= link_to "このページへ移動する", new_user_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
         </div>
       <% end %>
     </details>
@@ -101,7 +101,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", code_libraries_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -133,7 +133,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", pre_codes_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -218,7 +218,7 @@
       <% unless logged_in? %>
         <div class="pb-5 mt-3 flex justify-center">
           <%= link_to "このページへ移動する", new_user_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
         </div>
       <% end %>
     </details>
@@ -251,7 +251,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", books_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -282,7 +282,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", books_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -375,7 +375,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", books_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -406,7 +406,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", editor_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -439,7 +439,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", pre_codes_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
 
@@ -472,7 +472,7 @@
 
       <div class="pb-5 mt-3 flex justify-center">
         <%= link_to "このページへ移動する", code_libraries_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
       </div>
     </details>
   </section>
@@ -580,7 +580,7 @@
     </p>
     <div class="mt-4 flex justify-center">
       <%= link_to "お問い合わせ", contact_path,
-            class: "inline-flex items-center justify-center px-6 py-2 rounded-full ring-1 ring-[#CC0000] text-[#CC0000] bg-white hover:bg-[#CC0000] hover:text-white active:bg-[#FFD6FF] transition-colors" %>
+            class: "btn-pill is-red" %>
     </div>
   </section>
 </div>
