--- a/app/views/quizzes/sections/questions/edit.html.erb
+++ b/app/views/quizzes/sections/questions/edit.html.erb
@@ -53,8 +53,7 @@
     </div>
   </div>
 
-  <div>
-    <%= f.submit "更新する", class: "px-4 py-2 rounded bg-slate-900 text-white" %>
-    <%= link_to "戻る", quiz_section_question_path(@quiz, @section, @question), class: "ml-2 underline" %>
+  <div class="mt-6 flex justify-center">
+    <%= f.submit "更新する", class: "btn-solid-red--wide" %>
   </div>
 <% end %>
